Release history for Joose:

{{ $NEXT }}

    [ENHANCEMENTS]
    
    - none
    
    [API CHANGES]

    - removed the undocumented namespaces facility (was not in use anyway)
    
    [BUG FIXES]
    
    - fixed 1 leaked global
    - fixed a bug, preventing roles to have `toString` (and other non-enumerable) methods 


3.018     2011-03-12 12:58


    [ENHANCEMENTS]
    
    - added a sanity checks before consuming a role or inheriting from superclass (should evalutes to "true")
    - from now on, include the "Task/Joose/Core" bundle in the root of distribution as "task-joose-core.js"
    - added a `Joose.C` symbol for configuration options; can be specified as the JOOSE_CFG prior Joose has been loaded
    
    [API CHANGES]

    - removed support for class extension via `Class` keyword - now it will throw the "Double declaration of [ClassName]" exception
      use ClassName.meta.extend() instead
    
    [BUG FIXES]
    
    - updated copyright years in docs


3.017     2011-01-12 18:33

    [ENHANCEMENTS]
    
    - added `strToClass` helper function
    - added Joose.A.eachR iterator
    
    [API CHANGES]

    - none
    
    [BUG FIXES]
    
    - none


3.016     2010-12-14 15:33

    [ENHANCEMENTS]
    
    - throw 'Error' instances instead of plain strings in various places
    - initial progress on reflection, allowing to receive the currently running method
    
    [API CHANGES]

    - setters no longer are being used for initial instance initialization (prior 'initialize' method)
    
    [BUG FIXES]
    
    - fixed a very specific bug, related to subclassing non-joose classes with custom constructor


3.015     2010-11-15 13:31


    [ENHANCEMENTS]
    
    - links to OpenJSAN in the documentation replaced with links to GitHub
    
    [API CHANGES]

    -none-
    
    [BUG FIXES]
    
    -none-


3.014     2010-11-01 10:32

    
    [ENHANCEMENTS]
    
    - switching to `npm` only as the distribution channel (migrating from JSAN)
    