@@ -182,6 +182,11 @@ Joose.O = {
     },
     
     
+    isClass : function (obj) {
+        return obj && obj.meta && obj.meta.c == obj
+    },
+    
+    
     wantArray : function (obj) {
         if (obj instanceof Array) return obj
         
