@@ -50,7 +50,9 @@ Joose.Managed.Attribute = new Joose.Managed.Class('Joose.Managed.Attribute', {
     override : {
         
         computeValue : function () {
-            if (!Joose.O.isFunction(this.init)) this.SUPER()
+            var init    = this.init
+            
+            if (Joose.O.isClass(init) || !Joose.O.isFunction(init)) this.SUPER()
         },
         
         
@@ -179,10 +181,13 @@ Joose.Managed.Attribute = new Joose.Managed.Class('Joose.Managed.Attribute', {
             if (config.hasOwnProperty(name)) {
                 value = config[name]
                 isSet = true
-            } else 
-                if (Joose.O.isFunction(this.init)) {
+            } else {
+                var init    = this.init
+                
+                // simple function (not class) has been used as "init" value
+                if (Joose.O.isFunction(init) && !Joose.O.isClass(init)) {
                     
-                    value = this.init.call(instance, config, name)
+                    value = init.call(instance, config, name)
                     
                     isSet = true
                     
@@ -190,7 +195,8 @@ Joose.Managed.Attribute = new Joose.Managed.Class('Joose.Managed.Attribute', {
                     
                     value = instance[ this.builder.replace(/^this\./, '') ](config, name)
                     isSet = true
-                } 
+                }
+            }
             
             if (isSet)
                 this.setRawValueTo(instance, value)
