@@ -90,9 +90,12 @@ To specify the default value for the attribute use `init` property. In the examp
 If you'll provide a function as the value for `init`, it will be called during initialization with the following signature:
 `func(attributeName, config)`, where `config` is the 1st argument passed to constructor. Function will be called as class's method (in the instance's scope).
 
+**The exception** from this rule is the function which represent the constructor of some class. Such function **will not** be called during initialization.
+
 Value, returned from function, will be used for initialization. **Note**, that if there is setter method, it won't be used during initialization - value will be just assigned to instance.
 
 Any other values, provided as `init` value, will be applied to prototype of the class directly.
+
 
 Also, to keep the attributes declaration section clean, you can specify the method to call, to receive the default value with `builder` option:
 
@@ -118,6 +121,7 @@ Simplified form. Attribute helpers
 
 Advanced attributes also allows a simplified form, when the attribute's properties object is provided as an atomic value (string or number for example).
 In this case, this value is treated as value of `init` property, value of `is` remains undefined (no accessors will be created for this attribute).
+
 
 The following examples are equivalent:
 
